# MiniCypher33

./: CMakeLists.txt  LICENSE  README.md
glade/: window_main.glade~
include/: XORcipher.h  analyzeText.h  baseConverter.h  binaryToGrayCode.h  bitwiseAND_OR_NOT.h  caseConversion.h  decimalToRoman.h  grayToBinary.h  morseCodeEncoding.h  railFence.h  randomPass.h  reverseString.h  romanToDecimal.h  rot.h  runLengthEncoding.h  urlDecode.h  urlEncode.h  view_manager.h  vigenereDecrypt.h  vigenereEncrypt.h
src/: XORcipher.c  analyzeText.c  baseConverter.c  binaryToGrayCode.c  bitwiseAND_OR_NOT.c  caseConversion.c  decimalToRoman.c  grayToBinary.c  main.c  morseCodeEncoding.c  railFence.c  randomPass.c  reverseString.c  romanToDecimal.c  rot.c  runLengthEncoding.c  urlDecode.c  urlEncode.c  vigenereDecrypt.c  vigenereEncrypt.c
